# eski-osmon

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install  justfile  license-apache  license-mit  package.json  pnpm-lock.yaml  readme.md  release.ps1  release.sh  test.osm  turbo.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
.github/workflows/: bulut.yaml  havo.yaml  osmon.yaml  release-old.yaml  release.yaml  shell.yaml  test.yaml  turbo.yaml
apps/api/: next.config.js  package.json
apps/api/components/: Header.tsx
apps/api/lib/: octokit.ts
apps/api/pages/: index.tsx
apps/api/pages/api/: info.ts
apps/docs/: next.config.js  old.url  package.json  tsconfig.json
apps/docs/app/: head.tsx  layout.tsx  page.tsx
apps/docs/app/context/: ContextClickCounter.tsx  layout.tsx  page.tsx
apps/docs/app/error-handling/: error.tsx  layout.tsx  page.tsx  template.tsx
apps/docs/app/head/: HeadInfo.tsx  head.tsx  layout.tsx  page.tsx  template.tsx
apps/docs/app/hooks/: layout.tsx
apps/docs/app/isr/: layout.tsx  page.tsx
apps/docs/app/layouts/: layout.tsx  page.tsx
apps/docs/app/loading/: layout.tsx  loading.tsx  page.tsx
apps/docs/app/ssg/: layout.tsx  page.tsx
apps/docs/app/ssr/: layout.tsx  page.tsx
apps/docs/app/streaming/: Product.tsx  RecommendedProducts.tsx  Reviews.tsx  layout.tsx  page.tsx
apps/docs/app/styling/: layout.tsx  page.tsx
apps/docs/public/old/: site.webmanifest
apps/web/: README.md  next.config.js  package.json  pnpm-lock.yaml
apps/web/public/: robots.txt  sitemap.xml
apps/web/public/install/: install.ps1  install.sh  install_test.ps1  readme.md
apps/wiki/: package.json  pnpm-lock.yaml  tsconfig.json
apps/wiki/app/: head.tsx  layout.tsx  page.tsx
apps/wiki/app/context/: ContextClickCounter.tsx  layout.tsx  page.tsx
apps/wiki/app/error-handling/: error.tsx  layout.tsx  page.tsx  template.tsx
apps/wiki/app/head/: HeadInfo.tsx  head.tsx  layout.tsx  page.tsx
apps/wiki/app/hooks/: layout.tsx
apps/wiki/app/isr/: layout.tsx  page.tsx
apps/wiki/app/layouts/: layout.tsx  page.tsx
apps/wiki/app/loading/: layout.tsx  loading.tsx  page.tsx
apps/wiki/app/ssg/: layout.tsx  page.tsx
apps/wiki/app/ssr/: layout.tsx  page.tsx
apps/wiki/app/streaming/: CartCount.tsx  Product.tsx  RecommendedProducts.tsx  Reviews.tsx  layout.tsx  page.tsx
apps/wiki/app/styling/: layout.tsx  page.tsx
apps/wiki/lib/: demos.ts  getCategories.ts
apps/wiki/lib/data/: products.ts  reviews.ts
apps/wiki/ui/: BuggyButton.tsx  Button.tsx  ComponentTree.tsx  ExternalLink.tsx  Footer.tsx  GlobalNav.tsx  MobileNavToggle.tsx  ProductCard.tsx  ProductDeal.tsx  ProductLighteningDeal.tsx  ProductPrice.tsx  ProductReviewCard.tsx  ProductSplitPayments.tsx  ProductUsedPrice.tsx  Tab.tsx  TabNavItem.tsx  UwULogo.tsx
backend/: pnpm-lock.yaml
backend/components/: Footer.tsx
backend/lib/: octokit.ts
backend/pages/api/version/: index.ts
bulut/: Cargo.toml  readme.md
bulut/src/: error.rs  function.rs
examples/: README.md  salom.osm
examples/compiler/: a.out
havo/: Cargo.toml  README.md
havo/src/: lib.rs  main.rs
havo/stage_1/: README.md
havo/tests/: run_tests.rs
install/.github/workflows/: ci.yaml
osmon/: .gitignore  Cargo.toml  readme.md
osmon/.github/workflows/: release.yaml
osmon/src/: builtins.rs  code.rs  lib.rs
plugins/syntax-highlighter-static/: package.json
script/: README.md  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
script/.github/workflows/: node.js.yml  publish.yml
script/demo/: README.md  script.osm  style.css
script/src/: core.ts  index.ts
script/src/dictionary/: dictionary.ts  prepareArrayBeforeBuild.ts  sortedOsmon.json
src/: builtins.rs  class.rs  code.rs  compiler.rs  lib.rs  macros.rs  main.rs  parser.rs
src/std_library/: mod.rs
src/syntax/: interner.rs  position.rs
src/syntax/lexer/: reader.rs
syntax-highlighter/: CHANGELOG.md  vsc-extension-quickstart.md
vm/: Cargo.toml
vm/benches/: factorial_bench.rs
vm/bytecode/: Cargo.toml
vm/bytecode/src/: assembler.rs  lib.rs  main.rs  parser.rs
vm/simple/: Cargo.toml
vm/simple/src/: builder.rs  context.rs  lib.rs
vm/src/: function.rs  main.rs
vm/src/jit/cpu/: mod.rs
website/: package.json  pnpm-lock.yaml
website/public/install/: readme.md
website/src/pages/: _app.tsx
wiki/: .gitignore  package.json  pnpm-lock.yaml
wiki-old/: package.json  readme.md
wiki-old/docs/.vuepress/: config.ts
wiki-old/docs/.vuepress/configs/: head.ts  navbar.ts  sidebar.ts
wiki/app/: head.tsx  layout.tsx
wiki/docs/: about.md  readme.md
wiki/docs/.vuepress/configs/: index.ts  theme.ts
wiki/docs/.vuepress/styles/: palette.scss
wiki/docs/learn/: readme.md
wiki/ui/: AddressBar.tsx  UwULogo.tsx
(+73 files in other folders)
