[package]
name = "osmon"
version = "0.2.0"
edition = "2018"
homepage = "https://osmon.dev"
documentation = "https://wiki.osmon.dev"
repository = "https://github.com/osmon-lang/osmon/"
description = "A programming language for Uzbeks"
authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
keywords = ["programming language", "interpreter", "uzbek"]
readme = "readme.md"
categories = ["language"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["target", ".github"]

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.11"
winapi = { version = "=0.3.9", features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dependencies]
bulut = "0.2.0"
time = "0.1.40"
structopt = "0.2.13"
float_duration = "0.3.3"

[package.metadata.winres]
OriginalFilename = "osmon.exe"
LegalCopyright = "© Osmon & UwUssimo. Apache-2.0"
ProductName = "Osmon"
FileDescription = "Osmon: O'zbek tilidagi birinchi dinamik til"
